--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@ height: 100%;
 }
 .desc{
 /*background-color:red;*/
-width:100px;
+font-size: 26px;
+width:120px;
 margin:0 auto;
 color: #FFC0CB;
 }
